# manga-translator-gui

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/manga_translator_gui/: app.py  cli.py  init.py
